# AirSLAM

./: .gitignore  CMakeLists.txt  PHASE1_RESULTS.md  README.md  SETUP.md  airslam-roadmap.md
configs/camera/: glasgow.yaml  openloris_cafe1-1_vio.yaml  openloris_corridor1-1_vio.yaml  openloris_corridor1-2_vio.yaml  openloris_home1-1_vio.yaml  openloris_t265.yaml  openloris_t265_vio.yaml  viode.yaml
configs/map_refinement/: mr_euroc_dino.yaml
configs/relocalization/: reloc_euroc.yaml  reloc_glasgow_anyloc.yaml  reloc_glasgow_dbow.yaml  reloc_glasgow_dino.yaml  reloc_openloris_anyloc.yaml  reloc_openloris_dbow.yaml
configs/visual_odometry/: vo_glasgow.yaml
demo/: add_dino_descriptors.cpp  dino_descriptor_io.cpp  dump_bow.cpp  dump_bow_images.cpp  map_refinement.cpp  relocalization.cpp  test_anyloc.cpp  test_dino.cpp  test_gtsam_factors.cpp  test_isam2_covariance.cpp  test_localmap_parity.cpp  test_yolo.cpp
docker/: Dockerfile  README.md  build.sh  run.sh  setup_extras.sh
experiments/dino/: README.md  build_ol_manifest.py  build_trt_engine.py  compare_dbow.py  compute_descriptors.py  cross_session.py  eval_retrieval.py  export_anyloc_onnx.py  export_onnx.py  fit_anyloc_vocab.py  gp_compare.py  kf_manifest.py  prep_manifest.py
experiments/glasgow/: README.md  kitti_to_mav0.py
experiments/openloris_yolo_eval/: README.md  export_yolo_onnx.py  mask_viz.py  yolo_fisheye_eval.py
include/: anyloc_extractor.h  dino_extractor.h  frame.h  gtsam_backend.h  gtsam_imu_factor.h  gtsam_line_factor.h  gtsam_plucker_line.h  isam_smoother.h  map.h  map_builder.h  map_refiner.h  map_user.h  mappoint.h  optimizer_backend.h  place_recognition.h  read_configs.h  trt_module.h  yolo_detector.h
launch/: dump_bow.launch  dump_bow_images.launch
launch/map_refinement/: mr_euroc.launch  mr_oivio.launch  mr_tartanair.launch
launch/relocalization/: reloc_euroc.launch
launch/visual_odometry/: vo_euroc.launch  vo_euroc_dark.launch  vo_oivio.launch  vo_tartanair.launch  vo_uma_bumblebee.launch
model_export/: README.md
src/: anyloc_extractor.cpp  dino_extractor.cpp  frame.cc  gtsam_backend.cpp  isam_smoother.cpp  light_glue.cpp  map.cc  map_builder.cc  map_refiner.cc  map_user.cc  optimizer_backend.cpp  place_recognition.cpp  plnet.cpp  super_glue.cpp  super_point.cpp  trt_module.cpp  yolo_detector.cpp
src/g2o_optimization/: g2o_optimization.cc
test/: backend_regression.sh
tools/onnx_trt10/: README.md  fix_int_types.py
tools/openloris/: README.md  gen_openloris.py
tools/rerun/: log_run.py
tools/viode/: extract_viode_bag.py
